--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/app.css">
     <title>{{page}}</title>
 </head>
 <body>
-    
+    {{> header}}
+    {{{body}}}
+    {{> footer}}
 </body>
 </html>
