--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,4 @@
-<form action="/singup" method="post">
+<form action="/signup" method="post">
     <div class="py-0">
         <div class="flex bg-white rounded-lg shadow-lg overflow-hidden mx-auto max-w-sm lg:max-w-3xl justify-center">
             <div class="w-full p-1 lg:w-1/2">
@@ -23,14 +23,12 @@
                     <h1 class="px-2 py-1 w-5/6 text-center text-gray-600">Suscribete con Google</h1>
                 </a>
                 <div class="mt-3">
-                    {{#each onSubmit}}
                         <input class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none"
-                            type="text" name="userusername" placeholder="Nombre de Usuario" value="{{user.username}}" required>
-                    {{/each}}
+                            type="text" name="username" placeholder="Nombre de Usuario" value="{{user.username}}" required>
                 </div>
                 <div class="mt-3">
                     <input class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none"
-                        type="text" name="username" placeholder="Nombre Completo" value="{{user.name}}" required>
+                        type="text" name="name" placeholder="Nombre Completo" value="{{user.name}}" required>
                 </div>
                 
                 <div class="mt-3">
@@ -52,7 +50,7 @@
                 </div>
                 <div class="mt-3">
                     <input class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none"
-                        type="password"  name="passwordrepeat" placeholder="Repite Contraseña" value="{{user.passwordRepeat}}" required>
+                        type="password"  name="passwordRepeat" placeholder="Repite Contraseña" value="{{user.passwordRepeat}}" required>
                 </div>
                 <div class="mt-3">
                     <input class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none"
