--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -46,11 +46,11 @@
                 </div>
                 <div class="mt-3">
                     <input class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none"
-                        type="password"  name="password" placeholder="Contraseña"  value="{{user.password}}" required>
+                        type="password"  name="password" placeholder="Contraseña" required>
                 </div>
                 <div class="mt-3">
                     <input class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none"
-                        type="password"  name="passwordRepeat" placeholder="Repite Contraseña" value="{{user.passwordRepeat}}" required>
+                        type="password"  name="passwordRepeat" placeholder="Repite Contraseña" required>
                 </div>
                 <div class="mt-3">
                     <input class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none"
