Se modifica error en fecha, profile preterminado

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -38,7 +38,7 @@
                     <div class="mt-3">
                         <p class="text-xs text-gray-500">Fecha de Nacimiento</p>
                         <input class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-1 px-4 block w-full appearance-none"
-                            type="date" name="date" placeholder="Fecha de nacimiento" value="{{user.birthday}}">
+                            type="date" name="birthday" placeholder="Fecha de nacimiento" value="{{user.birthday}}">
                     </div>
                     <div class="mt-3">
                         <select class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-1 px-4 block w-full appearance-none"
