--- a/views/components/header.hbs
+++ b/views/components/header.hbs
@@ -1,5 +1,5 @@
   <!-- This example requires Tailwind CSS v2.0+ -->
-<nav class="bg-gray-800">
+<nav class="lg:border-b dark:bg-gray-800">
   <div class="max-w-7xl mx-auto px-0 sm:px-0 lg:px-0">
     <div class="relative flex items-center justify-between h-16">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
