--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1555,6 +1555,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-right: 0px;
   }
 
+  .md\:block {
+    display: block;
+  }
+
   .md\:w-1\/4 {
     width: 25%;
   }
