Home estructurado - funciona

--- a/views/components/header.hbs
+++ b/views/components/header.hbs
@@ -1,5 +1,5 @@
   <!-- This example requires Tailwind CSS v2.0+ -->
-<nav class="lg:border-b dark:bg-gray-800">
+<nav class="lg:border-b lg:border-slate-900/10 dark:border-slate-50/[0.06] bg-white supports-backdrop-blur:bg-white/95 dark:bg-gray-800">
   <div class="max-w-7xl mx-auto px-0 sm:px-0 lg:px-0">
     <div class="relative flex items-center justify-between h-16">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -59,8 +59,6 @@
         <button class="flex  p-4 ml-6 md:mx-0">
              <a class="block w-1/2 px-4 py-2 mx-1 rounded text-center text-sm bg-blue-500 font-medium text-white leading-5 hover:bg-blue-600 md:w-auto" href="#">New Post</a>
         </button>
-
-
 
       </div>
     </div>
