--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/app.css">
     <title>{{page}}</title>
 </head>
-<body class="">
+<body>
     {{{body}}}
 </body>
 </html>
