--- a/views/components/aside.hbs
+++ b/views/components/aside.hbs
@@ -1,18 +1,22 @@
 <div class="flex flex-col">
-    <div class="relative rounded-xl p-5 border m-5">
-        <ul role="list" class="p-2 divide-y divide-slate-200 ">
+    <div class="rounded-xl border m-5">
+        <div class="px-4 py-2 sm:px-6 rounded-t-xl border-b border-gray-200 bg-gray-50">
+            <h3 class="text-lg leading-6 font-medium text-gray-900">Applicant Information</h3>
+            <p class="mt-1 max-w-2xl text-sm text-gray-500">Personal details and application.</p>
+        </div>
+        <ul role="list" class="p-6 divide-y divide-slate-200">
         {{!-- {{#each users}} --}}
             <!-- Remove top/bottom padding when first/last child -->
-            <li class="flex py-4 first:pt-0 last:pb-0">
-                <div class="flex items-center">
+            <li class="flex justify-between first:pt-0 last:pb-0 py-4">
+                <div class="flex items-center ">
                     <div class="flex-shrink-0 h-10 w-10">
                         <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60" alt="">
                     </div>
-                    <div class="ml-2 w-40">
+                    <div class="ml-2 w-48">
                         <div class="text-sm font-medium text-gray-900">Jane Cooper</div>
                         <div class="text-sm text-gray-500">@jane.cooper</div>
                     </div>
-                    <div class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+                    <div class="whitespace-nowrap text-right text-sm font-medium">
                         <a href="#" class="inline-flex items-center px-4 py-1 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
@@ -22,15 +26,15 @@
                     </div>
                 </div>
             </li>
-            <li class="flex py-4 first:pt-0 last:pb-0">
+            <li class="flex justify-between first:pt-0 last:pb-0 py-4">
                 <div class="flex items-center">
                     <div class="flex-shrink-0 h-10 w-10">
                         <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1570295999919-56ceb5ecca61?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=4&amp;w=256&amp;h=256&amp;q=60" alt="">                </div>
-                    <div class="ml-2 w-40">
+                    <div class="ml-2 w-48">
                         <div class="text-sm font-medium text-gray-900">Cody Fisher</div>
                         <div class="text-sm text-gray-500">@cody.fisher</div>
                     </div>
-                    <div class="flex items-center px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+                    <div class="whitespace-nowrap text-right text-sm font-medium">
                         <a href="#" class="inline-flex items-center px-4 py-1 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
@@ -49,20 +53,24 @@
         </ul>
     </div>
 
-    <div class="relative rounded-xl p-5 border m-5 flex flex-row">
+    <div class="rounded-xl border m-5">
+        <div class="px-4 py-2 sm:px-6 rounded-t-xl border-b border-gray-200 bg-gray-50">
+            <h3 class="text-lg leading-6 font-medium text-gray-900">Applicant Information</h3>
+            <p class="mt-1 max-w-2xl text-sm text-gray-500">Personal details and application.</p>
+        </div>
         <ul role="list" class="p-6 divide-y divide-slate-200">
         {{!-- {{#each users}} --}}
             <!-- Remove top/bottom padding when first/last child -->
-            <li class="flex py-4 first:pt-0 last:pb-0">
-                <div class="flex items-center">
-                    <div class="flex-shrink-0 h-10 w-16">
-                    <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60" alt="">
+            <li class="flex justify-between first:pt-0 last:pb-0 py-4">
+                <div class="flex items-center ">
+                    <div class="flex-shrink-0 h-10 w-10">
+                        <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60" alt="">
                     </div>
-                    <div class="ml-2">
+                    <div class="ml-2 w-48">
                         <div class="text-sm font-medium text-gray-900">Jane Cooper</div>
                         <div class="text-sm text-gray-500">@jane.cooper</div>
                     </div>
-                    <div class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+                    <div class="whitespace-nowrap text-right text-sm font-medium">
                         <a href="#" class="inline-flex items-center px-4 py-1 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
@@ -72,15 +80,15 @@
                     </div>
                 </div>
             </li>
-            <li class="flex py-4 first:pt-0 last:pb-0">
+            <li class="flex justify-between first:pt-0 last:pb-0 py-4">
                 <div class="flex items-center">
-                    <div class="flex-shrink-0 h-10 w-16">
+                    <div class="flex-shrink-0 h-10 w-10">
                         <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1570295999919-56ceb5ecca61?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=4&amp;w=256&amp;h=256&amp;q=60" alt="">                </div>
-                    <div class="ml-4">
+                    <div class="ml-2 w-48">
                         <div class="text-sm font-medium text-gray-900">Cody Fisher</div>
                         <div class="text-sm text-gray-500">@cody.fisher</div>
                     </div>
-                    <div class="flex items-center px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+                    <div class="whitespace-nowrap text-right text-sm font-medium">
                         <a href="#" class="inline-flex items-center px-4 py-1 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
@@ -91,6 +99,65 @@
                 </div>
             </li>
         {{!-- {{/each}} --}}
+        <span class="hidden sm:block pt-6">
+            <button type="button" class="items-center text-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 w-full">
+                View All
+            </button>
+        </span>
+        </ul>
+    </div>
+
+        <div class="rounded-xl border m-5">
+        <div class="px-4 py-2 sm:px-6 rounded-t-xl border-b border-gray-200 bg-gray-50">
+            <h3 class="text-lg leading-6 font-medium text-gray-900">Applicant Information</h3>
+            <p class="mt-1 max-w-2xl text-sm text-gray-500">Personal details and application.</p>
+        </div>
+        <ul role="list" class="p-6 divide-y divide-slate-200">
+        {{!-- {{#each users}} --}}
+            <!-- Remove top/bottom padding when first/last child -->
+            <li class="flex justify-between first:pt-0 last:pb-0 py-4">
+                <div class="flex items-center ">
+                    <div class="flex-shrink-0 h-10 w-10">
+                        <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60" alt="">
+                    </div>
+                    <div class="ml-2 w-48">
+                        <div class="text-sm font-medium text-gray-900">Jane Cooper</div>
+                        <div class="text-sm text-gray-500">@jane.cooper</div>
+                    </div>
+                    <div class="whitespace-nowrap text-right text-sm font-medium">
+                        <a href="#" class="inline-flex items-center px-4 py-1 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
+                            </svg>
+                            Add
+                        </a>
+                    </div>
+                </div>
+            </li>
+            <li class="flex justify-between first:pt-0 last:pb-0 py-4">
+                <div class="flex items-center">
+                    <div class="flex-shrink-0 h-10 w-10">
+                        <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1570295999919-56ceb5ecca61?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=4&amp;w=256&amp;h=256&amp;q=60" alt="">                </div>
+                    <div class="ml-2 w-48">
+                        <div class="text-sm font-medium text-gray-900">Cody Fisher</div>
+                        <div class="text-sm text-gray-500">@cody.fisher</div>
+                    </div>
+                    <div class="whitespace-nowrap text-right text-sm font-medium">
+                        <a href="#" class="inline-flex items-center px-4 py-1 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
+                            </svg>
+                            Add
+                        </a>
+                    </div>
+                </div>
+            </li>
+        {{!-- {{/each}} --}}
+        <span class="hidden sm:block pt-6">
+            <button type="button" class="items-center text-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 w-full">
+                View All
+            </button>
+        </span>
         </ul>
     </div>
 </div>
