--- a/views/components/aside.hbs
+++ b/views/components/aside.hbs
@@ -120,7 +120,7 @@
                     <div class="flex-shrink-0 h-10 w-10">
                         <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60" alt="">
                     </div>
-                    <div class="ml-2 w-36">
+                    <div class="ml-2 md:w-20 w-32">
                         <div class="text-sm font-medium text-gray-900">Jane Cooper</div>
                         <div class="text-sm text-gray-500">@jane.cooper</div>
                     </div>
@@ -138,7 +138,7 @@
                 <div class="flex items-center">
                     <div class="flex-shrink-0 h-10 w-10">
                         <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1570295999919-56ceb5ecca61?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=4&amp;w=256&amp;h=256&amp;q=60" alt="">                </div>
-                    <div class="ml-2 w-36">
+                    <div class="ml-2 md:w-20 w-32">
                         <div class="text-sm font-medium text-gray-900">Cody Fisher</div>
                         <div class="text-sm text-gray-500">@cody.fisher</div>
                     </div>
