--- a/views/components/content.hbs
+++ b/views/components/content.hbs
@@ -1,7 +1,7 @@
       <!-- This example requires Tailwind CSS v2.0+ -->
-      <div class="overflow-y-auto h-3/5 flex flex-1 flex-col mx-auto my-0">
-        <div class="my-2 overflow-y-scroll overflow-x-hidden sm:mx-6 lg:mx-8">
-          <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+      <div class="overflow-y-auto h-3/5 flex flex-1 flex-col mx-2 my-0 mt-4">
+        <div class="my-2 overflow-y-scroll overflow-x-hidden sm:mx-4 lg:mx-0">
+          <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-2">
             <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
               {{#if hasUsers }}
               <table class="min-w-full divide-y divide-gray-200 table-auto">
