--- a/views/components/header.hbs
+++ b/views/components/header.hbs
@@ -57,7 +57,7 @@
         </div>
 
         <button class="flex  p-4 ml-6 md:mx-0">
-             <a class="block w-1/2 px-4 py-2 mx-1 rounded text-center text-sm bg-blue-500 font-medium text-white leading-5 hover:bg-blue-600 md:w-auto" href="#">New Post</a>
+             <a class="block w-1/2 px-4 py-2 mx-1 rounded text-center text-sm bg-blue-500 font-medium text-white leading-5 hover:bg-blue-600 md:w-auto" href="/newpost">New Post</a>
         </button>
 
       </div>
