se elimina un aside

--- a/views/components/content.hbs
+++ b/views/components/content.hbs
@@ -1,5 +1,5 @@
       <!-- This example requires Tailwind CSS v2.0+ -->
-      <div class="overflow-y-auto h-3/5 flex flex-1 flex-col mx-2 my-0 mt-4">
+      <div class="overflow-y-auto h-3/5 flex flex-1 flex-col mx-2 my-0 mt-4 relative">
         <div class="my-2 overflow-y-scroll overflow-x-hidden sm:mx-4 lg:mx-0">
           <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-2">
             <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
