--- a/public/css/app.css
+++ b/public/css/app.css
@@ -741,6 +741,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 7rem;
 }
 
+.h-auto {
+  height: auto;
+}
+
+.max-h-min {
+  max-height: -webkit-min-content;
+  max-height: -moz-min-content;
+  max-height: min-content;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -771,10 +781,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-5 {
   width: 1.25rem;
-}
-
-.w-32 {
-  width: 8rem;
 }
 
 .w-auto {
@@ -1663,10 +1669,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:w-1\/5 {
     width: 20%;
-  }
-
-  .md\:w-20 {
-    width: 5rem;
   }
 
   .md\:w-auto {
