--- a/views/components/sidebar.hbs
+++ b/views/components/sidebar.hbs
@@ -1,6 +1,6 @@
 <div class="w-64 bg-gray-50 dark:bg-gray-800" aria-label="Sidebar">
 	<aside class="w-64 xs:invisible sm:block md:block lg:block" aria-label="Sidebar">
-		<div class="h-screen overflow-y-auto px-3 py-2 bg-gray-50 dark:bg-gray-800">
+		<div class="h-full overflow-y-auto px-3 py-2 bg-gray-50 dark:bg-gray-800">
 			<ul class="space-y-2">
 				<li>
 					<a href="/home"
