--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
     {{> header}}
-    <div class="relative min-h-screen flex">
+    <div class="relative max-h-min flex">
         {{>sidebar}}
         <div class="flex flex-col flex-1">
             {{{body}}}
