consulta de usuario aleatorio

--- a/views/components/aside.hbs
+++ b/views/components/aside.hbs
@@ -10,7 +10,7 @@
             <li class="flex justify-between first:pt-0 last:pb-0 py-4">
                 <div class="flex items-center ">
                     <div class="flex-shrink-0 h-10 w-10">
-                        <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60" alt="">
+                        <img class="h-10 w-10 rounded-full" src="{{this.profilpic}}" alt="">
                     </div>
                     <div class="ml-2 w-48">
                         <div class="text-sm font-medium text-gray-900">{{this.name}}</div>
