--- a/views/layouts/auth.hbs
+++ b/views/layouts/auth.hbs
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="css/app.css">
     <title>{{page}}</title>
 </head>
-<body>
+<body class="flex items-center justify-center bg-gray-800 min-h-screen">
       {{{body}}}
 </body>
 </html>
