agregar usuarios y consulta funcionando

--- a/views/components/aside.hbs
+++ b/views/components/aside.hbs
@@ -1,11 +1,11 @@
 <div class="flex flex-col">
     <div class="rounded-xl border m-5">
         <div class="px-4 py-2 sm:px-6 rounded-t-xl border-b border-gray-200 bg-gray-50">
-            <h3 class="text-lg leading-6 font-medium text-gray-900">Applicant Information</h3>
+            <h3 class="text-lg leading-6 font-medium text-gray-900">Friends Information</h3>
             <p class="mt-1 max-w-2xl text-sm text-gray-500">Personal details and application.</p>
         </div>
         <ul role="list" class="p-6 divide-y divide-slate-200">
-        {{#each usersReg}}
+        {{#each friends}}
             <!-- Remove top/bottom padding when first/last child -->
             <li class="flex justify-between first:pt-0 last:pb-0 py-4">
                 <div class="flex items-center ">
@@ -15,14 +15,6 @@
                     <div class="ml-2 w-48">
                         <div class="text-sm font-medium text-gray-900">{{this.name}}</div>
                         <div class="text-sm text-gray-500">@{{this.username}}</div>
-                    </div>
-                    <div class="whitespace-nowrap text-right text-sm font-medium">
-                        <a href="#" class="inline-flex items-center px-4 py-1 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                                <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
-                            </svg>
-                            Add
-                        </a>
                     </div>
                 </div>
             </li>
@@ -37,23 +29,23 @@
 
     <div class="rounded-xl border m-5">
         <div class="px-4 py-2 sm:px-6 rounded-t-xl border-b border-gray-200 bg-gray-50">
-            <h3 class="text-lg leading-6 font-medium text-gray-900">Applicant Information</h3>
+            <h3 class="text-lg leading-6 font-medium text-gray-900">People Information</h3>
             <p class="mt-1 max-w-2xl text-sm text-gray-500">Personal details and application.</p>
         </div>
         <ul role="list" class="p-6 divide-y divide-slate-200">
-        {{!-- {{#each users}} --}}
+        {{#each users}}
             <!-- Remove top/bottom padding when first/last child -->
             <li class="flex justify-between first:pt-0 last:pb-0 py-4">
                 <div class="flex items-center ">
                     <div class="flex-shrink-0 h-10 w-10">
-                        <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60" alt="">
+                        <img class="h-10 w-10 rounded-full" src="{{this.profilpic}}" alt="">
                     </div>
                     <div class="ml-2 w-48">
-                        <div class="text-sm font-medium text-gray-900">Jane Cooper</div>
-                        <div class="text-sm text-gray-500">@jane.cooper</div>
+                        <div class="text-sm font-medium text-gray-900">{{this.name}}</div>
+                        <div class="text-sm text-gray-500">@{{this.username}}</div>
                     </div>
                     <div class="whitespace-nowrap text-right text-sm font-medium">
-                        <a href="#" class="inline-flex items-center px-4 py-1 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                        <a href="/addFriend/{{this.id}}" class="inline-flex items-center px-4 py-1 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
                             </svg>
@@ -62,25 +54,7 @@
                     </div>
                 </div>
             </li>
-            <li class="flex justify-between first:pt-0 last:pb-0 py-4">
-                <div class="flex items-center">
-                    <div class="flex-shrink-0 h-10 w-10">
-                        <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1570295999919-56ceb5ecca61?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=4&amp;w=256&amp;h=256&amp;q=60" alt="">                </div>
-                    <div class="ml-2 w-48">
-                        <div class="text-sm font-medium text-gray-900">Cody Fisher</div>
-                        <div class="text-sm text-gray-500">@cody.fisher</div>
-                    </div>
-                    <div class="whitespace-nowrap text-right text-sm font-medium">
-                        <a href="#" class="inline-flex items-center px-4 py-1 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                                <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
-                            </svg>
-                            Add
-                        </a>
-                    </div>
-                </div>
-            </li>
-        {{!-- {{/each}} --}}
+        {{/each}}
         <span class="hidden sm:block pt-6">
             <button type="button" class="items-center text-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 w-full">
                 View All
